# every_beat_counts_adc2022

./: .gitignore  00_simple_tempo_sync.cpp  README.md  Tempo Sync 101 Keynote.key  Tempo Sync 101 PowerPoint.pptx
SimpleMetronome/: CMakeLists.txt  SimpleMetronome.jucer
SimpleMetronome/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TempoUtils.cpp  TempoUtils.h
